nextgen/vcs-hooks/tests/snapshots/hooks_generator_test__windows__creates_local_hook_files.snap
---
source: nextgen/vcs-hooks/tests/hooks_generator_test.rs
expression: "fs::read_to_string(pre_commit).unwrap()"
---
#!/usr/bin/env pwsh
$ErrorActionPreference = 'Stop'

# Automatically generated by moon. DO NOT MODIFY!
# https://moonrepo.dev/docs/guides/vcs-hooks

moon run :lint
some-command
